--- a/orb_slam/CMakeLists.txt
+++ b/orb_slam/CMakeLists.txt
@@ -31,8 +31,8 @@ include_directories(
   ${PROJECT_SOURCE_DIR}
 )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall -O3 -march=native ")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3 -march=native")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall -O3 ")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3")
 
 add_executable(${PROJECT_NAME}
   src/main.cc
