--- a/akaze_features/package.xml
+++ b/akaze_features/package.xml
@@ -14,5 +14,6 @@
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>sensor_msgs</depend>
+  <depend>OpenCV</depend>
 
   </package>
