--- a/orb_slam/CMakeLists.txt
+++ b/orb_slam/CMakeLists.txt
@@ -8,20 +8,24 @@ find_package(catkin REQUIRED COMPONENTS
   image_transport
   cv_bridge
   g2o
+  dbow2
 )
 
 LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 find_package(Cholmod REQUIRED)
 find_package(Eigen3 REQUIRED)
 
-add_subdirectory(Thirdparty/DBoW2)
 
-catkin_package()
-
-message(*************************)
-message(${catkin_INCLUDE_DIRS})
-message(*************************)
-
+catkin_package(
+  CATKIN_DEPENDS
+  roscpp
+  tf
+  cv_bridge
+  sensor_msgs
+  image_transport
+  g2o
+  dbow2
+  )
 
 include_directories(
   include
@@ -54,11 +58,11 @@ add_executable(${PROJECT_NAME}
   src/Sim3Solver.cc
   src/Initializer.cc
 )
+
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES}
   ${EIGEN3_LIBS}
 #  cholmod
-  DBoW2
 #  g2o_core
 #  g2o_solver_cholmod
 #  g2o_solver_dense
