Refactor includes, prepare wrapper for tests, add pandora_slam_3d
Changelog:
- All orb_slam includes moved from orb_slam/include/* to
	orb_slam/include/orb_slam/*
- Src includes changed correspondingly

Features:
- Added pandora_slam_3d caller package

Issues:
- g2o package can't find Eigen package

--- a/pandora_slam_3d/package.xml
+++ b/pandora_slam_3d/package.xml
@@ -4,22 +4,17 @@
   <version>0.1.0</version>
   <description>Experimental 3D Slam package using ORB_SLAM</description>
 
-  <maintainer email="vasilis4ch@gmail.com">Vassilis Choutas</maintainer>
+  <maintainer email="kisamara@auth.gr">Konstantinos Samaras-Tsakiris</maintainer>
 
   <license>BSD</license>
 
-
-  <author>Vassilis Choutas</author>
   <author>Konstantinos Samaras-Tsakiris</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>orb_slam</exec_depend>
-  <exec_depend>akaze_features</exec_depend>
-  <exec_depend>dbow2</exec_depend>
-  <exec_depend>g2o</exec_depend>
+  <depend>roscpp</depend>
+  <depend>orb_slam</depend>
+  <depend>state_manager</depend>
+  <depend>roslint</depend>
 
-  <export>
-    <metapackage/>
-  </export>
 </package>
