Broken Eigen deps?

--- a/g2o/package.xml
+++ b/g2o/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>g2o</name>
   <version>0.0.0</version>
   <description>The g2o package</description>
   <maintainer email="bence@todo.todo">bence</maintainer>
   <license>TODO</license>
+
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>Eigen3</depend>
+  <depend>Cholmod</depend>
 </package>
