--- a/pandora_slam_3d/CMakeLists.txt
+++ b/pandora_slam_3d/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(pandora_slam_3d)
 
-LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
-find_package(Cholmod REQUIRED)
-find_package(Eigen3 REQUIRED)
-
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   orb_slam
@@ -18,13 +14,9 @@ catkin_package(
 		orb_slam
 		state_manager
 		roslint
-	INCLUDE_DIRS include
+	INCLUDE_DIRS
+		include
  )
-
-message(*************************)
-message(${catkin_INCLUDE_DIRS})
-message(*************************)
-
 
 include_directories(include
   ${catkin_INCLUDE_DIRS}
@@ -35,22 +27,22 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3")
 
 
 ############################  SLAM 3D  ###################################
-add_library(${PROJECT_NAME} src/pandora_slam_3d.cpp)
-target_link_libraries(${PROJECT_NAME}
+add_library(pandora_slam_3d src/pandora_slam_3d.cpp)
+target_link_libraries(pandora_slam_3d
 	${catkin_LIBRARIES}
 )
-add_executable(${PROJECT_NAME}_node src/pandora_slam_3d_node.cpp)
-target_link_libraries(${PROJECT_NAME}_node
+add_executable(pandora_slam_3d_node src/pandora_slam_3d_node.cpp)
+target_link_libraries(pandora_slam_3d_node
   ${catkin_LIBRARIES}
-  ${PROJECT_NAME}
+  pandora_slam_3d
 )
 
 set(ROSLINT_CPP_OPTS
     "--filter=-whitespace/end_of_line,-build/include_order,-whitespace/blank_line,
     -whitespace/parens,-whitespace/comments,-whitespace/braces")
-FILE(GLOB_RECURSE ${PROJECT_NAME}_LINT_SRCS
+FILE(GLOB_RECURSE pandora_slam_3d_LINT_SRCS
      RELATIVE ${PROJECT_SOURCE_DIR}
             include/pandora_slam_3d/*.h
             src/*.cpp
             )
-roslint_cpp(${${PROJECT_NAME}_LINT_SRCS})
+roslint_cpp(${pandora_slam_3d_LINT_SRCS})
