--- a/pandora_slam_3d/package.xml
+++ b/pandora_slam_3d/package.xml
@@ -15,6 +15,7 @@
   <depend>roscpp</depend>
   <depend>orb_slam</depend>
   <depend>state_manager</depend>
+  <depend>libuvc_camera</depend>
   <depend>roslint</depend>
 
 </package>
